--- a/index.html
+++ b/index.html
@@ -1,16 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
 
-</head>
-
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+  <body>
+    <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+    <header>
+      <nav class="navbar mg-btm-1">
+        <a href="services.html">Services</a>
+        <a href="#">Product </a>
+        <a href="#">Vision </a>
+        <a href="#">Features </a>
+        <a href="#">About </a>
+        <a href="contact.html">Contact</a>
+        <a id="img" href="index.html"
+          ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."
+        /></a>
+      </nav>
+    </header>
+    <section class="section-one">
+      <div id="cta">
+        <h1>
+          Innovation
+          <br />
+          <span>On</span>
+          <br />
+          Demand
+        </h1>
+        <button class="btn">
+          Get Started
+        </button>
+      </div>
+      <div id="img-1">
+        <img src="img/header-img.png" alt="Image of a code snippet." />
+      </div>
+    </section>
+    <div class="ln-break"></div>
+    <section class="about">
+      <div>
+        <h3>Features</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div>
+        <h3>About</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
+    <img
+      class="full-img"
+      src="img/mid-page-accent.jpg"
+      alt="Image of code snippets across the screen"
+    />
+    <section class="services">
+      <div>
+        <h3>Services</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div>
+        <h3>Product</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+      <div>
+        <h3>Vision</h3>
+        <p>
+          Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+          vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+          convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </section>
+    <div class="ln-break"></div>
+    <address>
+      <h3>Contact</h3>
+      <p class="mg-btm">
+        <span>123 Way 456 Street</span>
+        <br />
+        <span>Somewhere, USA 1 </span>
+      </p>
+      <p class="mg-btm">(888) 888-8888</p>
+      <p>sales@greatidea.io</p>
+    </address>
+    <footer>
+      Copyright Great Idea! 2018
+    </footer>
+  </body>
 </html>
